Fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,6 @@
   letter-spacing: 0;
 }
 #Mwindow {
-  overflow-y: scroll;
   box-shadow:
     inset -1px -1px #0a0a0a,
     inset 1px 1px #dfdfdf,
